force-app/main/default/objects/Parts_Shipment_Log__c/Parts_Shipment_Log__c.object-meta.xml
<CustomObject>
    <label>Parts Shipment Log</label>
    <nameField>
        <label>Parts Shipment Log Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>