force-app/main/default/objects/Parts_Shipment_Log__c/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <formula>PartsShipment__r.Shipping_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>