force-app/main/default/objects/Parts_Shipment_Log__c/fields/Order_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmed_Date__c</fullName>
    <formula>PartsShipment__r.Parts_Order__r.Confirmed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Confirmed Date</label>
    <type>Date</type>
</CustomField>