force-app/main/default/objects/Parts_Shipment_Log__c/fields/Order_Confirmed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmed_Quantity__c</fullName>
    <formula>PartsShipment__r.Parts_Order_Line_Item__r.Confirmed_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Confirmed Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>