force-app/main/default/objects/Parts_Shipment_Log__c/fields/Parts_Shipment_Log_Name__c.field-meta.xml
<CustomField>
    <fullName>Parts_Shipment_Log_Name__c</fullName>
    <displayFormat>PSL-{0000000}</displayFormat>
    <label>Parts Shipment Log Name</label>
    <type>AutoNumber</type>
</CustomField>