force-app/main/default/objects/Parts_Shipment_Log__c/fields/PartsShipment__c.field-meta.xml
<CustomField>
    <fullName>PartsShipment__c</fullName>
    <label>PartsShipment</label>
    <referenceTo>PartsShipment__c</referenceTo>
    <relationshipLabel>Parts Shipment Log</relationshipLabel>
    <relationshipName>Parts_Shipment_Log</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>