force-app/main/default/objects/Parts_Shipment_Log__c/fields/Shipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Quantity__c</fullName>
    <formula>PartsShipment__r.Shipped_Part_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>